add swagger doc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+cassandra.local-datacenter=datacenter1
+cassandra.keyspace-name=the_ride
+cassandra.username=cassandra
+cassandra.password=cassandra
+
+cassandra.port=9042
+cassandra.contact-points=127.0.0.1
+
+cassandra.schema-action=CREATE_IF_NOT_EXISTS
+cassandra.request.timeout=10s
+cassandra.connection.connect-timeout=10s
+cassandra.connection.init-query-timeout=10s
+
+#spring.data.cassandra.keyspace-name=the_ride
+#spring.data.cassandra.contact-points=127.0.0.1
+#spring.data.cassandra.port=9042
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
