--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,12 @@ cassandra.request.timeout=10s
 cassandra.connection.connect-timeout=10s
 cassandra.connection.init-query-timeout=10s
 
-#spring.data.cassandra.keyspace-name=the_ride
-#spring.data.cassandra.contact-points=127.0.0.1
-#spring.data.cassandra.port=9042
+spring.kafka.consumer.auto-offset-reset=earliest
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.producer.topic.retention.check.interval.ms=70000
+spring.kafka.producer.topic.retention.ms=60000
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
