--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,47 @@
 
+logging.file.name=/app/logs/the-ride-logs.txt
 
 
 
-spring.data.cassandra.local-datacenter=datacenter1
+#spring.data.cassandra.local-datacenter=${CASSANDRA_DATACENTER}
+#spring.data.cassandra.keyspace-name=${CASSANDRA_KEYSPACE}
+#spring.data.cassandra.username=${CASSANDRA_USER}
+#spring.data.cassandra.password=${CASSANDRA_PASSWORD}
+#spring.data.cassandra.port=${CASSANDRA_PORT}
+#spring.data.cassandra.auth-provider=${CASSANDRA_AUTH_PROVIDER}
+#spring.data.cassandra.contact-points=${CASSANDRA_CONTACTPOINTS}
+#
+#spring.data.cassandra.schema-action=${CASSANDRA_SCHEMA_ACTION}
+#spring.data.cassandra.request.timeout=${CASSANDRA_REQUEST_TIMEOUT}
+#spring.data.cassandra.connection.connect-timeout=${CASSANDRA_CONNECT_TIMEOUT}
+#spring.data.cassandra.connection.init-query-timeout=${CASSANDRA_QUERY_TIMEOUT}
+#
+#spring.kafka.consumer.auto-offset-reset=${KAFKA_OFFSET_RESET}
+#
+#spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+#
+#spring.kafka.producer.topic.retention.check.interval.ms=${KAFKA_INTERVALS}
+#spring.kafka.producer.topic.retention.ms=${KAFKA_RETENTION}
+
+
+
+
+spring.data.cassandra.local-datacenter=dc1
 spring.data.cassandra.keyspace-name=the_ride
 spring.data.cassandra.username=cassandra
 spring.data.cassandra.password=cassandra
 spring.data.cassandra.port=9042
-spring.data.cassandra.contact-points=${CASSANDRA_HOST}
+spring.data.cassandra.auth-provider=com.datastax.oss.driver.api.core.auth.PlainTextAuthProvider
+spring.data.cassandra.contact-points=localhost:9042
 
-spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+spring.data.cassandra.schema-action=CREATE
 spring.data.cassandra.request.timeout=10s
 spring.data.cassandra.connection.connect-timeout=10s
 spring.data.cassandra.connection.init-query-timeout=10s
 
 spring.kafka.consumer.auto-offset-reset=earliest
 
-spring.kafka.bootstrap-servers=${KAFKA_HOST}:9092
+spring.kafka.bootstrap-servers=localhost:9092
 
 spring.kafka.producer.topic.retention.check.interval.ms=70000
 spring.kafka.producer.topic.retention.ms=60000
@@ -54,5 +79,5 @@ spring.kafka.producer.topic.retention.ms=60000
 
 
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#
