--- a/config-map-kube.yaml
+++ b/config-map-kube.yaml
@@ -1,20 +1,20 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: the-ride-config
-  namespace: the-ride-ns
+  name: TheRideConfig
 data:
-  db_local-datacenter: "datacenter1"
-  db_keyspace-name: "the_ride"
-  db_username: "cassandra"
-  db_port: "9042"
-  db_auth-provider: "com.datastax.oss.driver.api.core.auth.PlainTextAuthProvider"
-  db_contact-points: "the-ride-cassandra.the-ride-ns.svc.cluster.local:9042"
-  db_schema-action: "create-if-not-exists"
-  db_request_timeout: "10s"
-  db_connect_timeout: "10s"
-  db_query_timeout: "10s"
-  kafka_offset_reset: "earliest"
-  kafka_bootstrap-servers: "my-kafka.default.svc.cluster.local:9092"
-  kafka_intervals: "70000"
-  kafka_retention: "60000"
+  CASSANDRA_LOCAL_DATACENTER: dc1
+  CASSANDRA_KEYSPACE_NAME: the_ride
+  CASSANDRA_USERNAME: cassandra
+  CASSANDRA_PASSWORD: cassandra
+  CASSANDRA_PORT: "9042"
+  CASSANDRA_AUTH_PROVIDER: com.datastax.oss.driver.api.core.auth.PlainTextAuthProvider
+  CASSANDRA_CONTACT_POINTS: localhost:9042
+  CASSANDRA_SCHEMA_ACTION: CREATE
+  CASSANDRA_REQUEST_TIMEOUT: 10s
+  CASSANDRA_CONNECTION_CONNECT_TIMEOUT: 10s
+  CASSANDRA_CONNECTION_INIT_QUERY_TIMEOUT: 10s
+  KAFKA_CONSUMER_AUTO_OFFSET_RESET: earliest
+  KAFKA_BOOTSTRAP_SERVERS: localhost:9092
+  KAFKA_PRODUCER_TOPIC_RETENTION_CHECK_INTERVAL_MS: "70000"
+  KAFKA_PRODUCER_TOPIC_RETENTION_MS: "60000"
