--- a/config-map-kube.yaml
+++ b/config-map-kube.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: TheRideConfig
+  name: the-ride-config
 data:
   CASSANDRA_LOCAL_DATACENTER: dc1
   CASSANDRA_KEYSPACE_NAME: the_ride
@@ -9,12 +9,12 @@ data:
   CASSANDRA_PASSWORD: cassandra
   CASSANDRA_PORT: "9042"
   CASSANDRA_AUTH_PROVIDER: com.datastax.oss.driver.api.core.auth.PlainTextAuthProvider
-  CASSANDRA_CONTACT_POINTS: localhost:9042
+  CASSANDRA_CONTACT_POINTS: 192.168.8.181
   CASSANDRA_SCHEMA_ACTION: CREATE
   CASSANDRA_REQUEST_TIMEOUT: 10s
   CASSANDRA_CONNECTION_CONNECT_TIMEOUT: 10s
   CASSANDRA_CONNECTION_INIT_QUERY_TIMEOUT: 10s
   KAFKA_CONSUMER_AUTO_OFFSET_RESET: earliest
-  KAFKA_BOOTSTRAP_SERVERS: localhost:9092
+  KAFKA_BOOTSTRAP_SERVERS: 192.168.8.181:9092
   KAFKA_PRODUCER_TOPIC_RETENTION_CHECK_INTERVAL_MS: "70000"
   KAFKA_PRODUCER_TOPIC_RETENTION_MS: "60000"
