--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.data.cassandra.password=${CASSANDRA_PASSWORD}
 spring.data.cassandra.port=${CASSANDRA_PORT}
 spring.data.cassandra.auth-provider=${CASSANDRA_AUTH_PROVIDER}
 spring.data.cassandra.contact-points=${CASSANDRA_CONTACT_POINTS}
+spring.data.cassandra.basePackages=com.aikhomu_okoedion.TheRide.PortsAndAdapters.Driven.Adapters.DB
 
 spring.data.cassandra.schema-action=${CASSANDRA_SCHEMA_ACTION}
 spring.data.cassandra.request.timeout=${CASSANDRA_REQUEST_TIMEOUT}
@@ -26,14 +27,15 @@ spring.kafka.producer.topic.retention.ms=${KAFKA_PRODUCER_TOPIC_RETENTION_MS}
 
 
 
-
+#
 #spring.data.cassandra.local-datacenter=dc1
 #spring.data.cassandra.keyspace-name=the_ride
 #spring.data.cassandra.username=cassandra
 #spring.data.cassandra.password=cassandra
 #spring.data.cassandra.port=9042
 #spring.data.cassandra.auth-provider=com.datastax.oss.driver.api.core.auth.PlainTextAuthProvider
-#spring.data.cassandra.contact-points=localhost:9042
+#spring.data.cassandra.contact-points=localhost
+#spring.data.cassandra.basePackages=com.aikhomu_okoedion.TheRide.PortsAndAdapters.Driven.Adapters.DB
 #
 #spring.data.cassandra.schema-action=CREATE
 #spring.data.cassandra.request.timeout=10s
