--- a/api-service-kube.yaml
+++ b/api-service-kube.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: TheRideService
+  name: the-ride-service
 spec:
   type: NodePort
   selector:
-    app: my-app # Selects the Pods running your application.
+    app: the-ride-api-app
   ports:
     - name: http
-      port: 80 # The port on which the service is exposed inside the cluster.
-      targetPort: 8080 # The port on which your application is listening.
-      nodePort: 30080 # The port on which the service is exposed on each node.
+      port: 80
+      targetPort: 8080
+      nodePort: 30080
